--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,6 @@
-# Prerequisites
 *.d
-
-# Compiled Object files
-*.slo
-*.lo
 *.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
 *.a
-*.lib
+*.so
+compile_commands.json
 
-# Executables
-*.exe
-*.out
-*.app
