--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "usrsctp"]
-	path = deps/usrsctp
-	url = https://github.com/sctplab/usrsctp.git
 [submodule "deps/plog"]
 	path = deps/plog
 	url = https://github.com/SergiusTheBest/plog
+[submodule "usrsctp"]
+	path = deps/usrsctp
+	url = https://github.com/paullouisageneau/usrsctp.git
 [submodule "deps/libjuice"]
 	path = deps/libjuice
 	url = https://github.com/paullouisageneau/libjuice
