--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: install packages
       run: sudo apt update && sudo apt install libgnutls28-dev nettle-dev
+    - name: submodules
+      run: git submodule update --init --recursive
     - name: cmake
       run: cmake -B build -DUSE_LIBJUICE=1 -DUSE_GNUTLS=1
     - name: make
