--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: Build and test
 on: [push]
 
 jobs:
@@ -16,6 +16,6 @@ jobs:
       run: cmake -B build -DUSE_JUICE=1 -DUSE_GNUTLS=1
     - name: make
       run: (cd build; make)
-    - name: tests
+    - name: test
       run: ./build/tests
 
