Visual Studio std::min,max fix (#77)
Visual Studio std::min,max fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
 
 if(WIN32)
 	add_definitions(-DWIN32_LEAN_AND_MEAN)
+	if (MSVC)
+        	add_definitions(-DNOMINMAX)
+    	endif()
 endif()
 
 set(LIBDATACHANNEL_SOURCES
