--- a/.github/workflows/build-nice.yml
+++ b/.github/workflows/build-nice.yml
@@ -7,7 +7,7 @@ on:
     branches:
     - master
 jobs:
-  build:
+  build-ubuntu:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
