Added -j2 option to make

--- a/.github/workflows/build-gnutls.yml
+++ b/.github/workflows/build-gnutls.yml
@@ -18,7 +18,7 @@ jobs:
     - name: cmake
       run: cmake -B build -DUSE_JUICE=1 -DUSE_GNUTLS=1
     - name: make
-      run: (cd build; make)
+      run: (cd build; make -j2)
     - name: test
       run: ./build/tests
   build-macos:
@@ -35,6 +35,6 @@ jobs:
 # hack to bypass EPERM issue on sendto()
         CFLAGS: -DJUICE_ENABLE_ADDRS_LOCALHOST
     - name: make
-      run: (cd build; make)
+      run: (cd build; make -j2)
     - name: test
       run: ./build/tests
