--- a/.github/workflows/build-openssl.yml
+++ b/.github/workflows/build-openssl.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: brew install openssl
+      run: brew install openssl@1.1
     - name: submodules
       run: git submodule update --init --recursive
     - name: cmake
