--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,13 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 4
 
+[*.js]
+insert_final_newline = true
+indent_style = space
+indent_size = 2
+
+[*.py]
+insert_final_newline = false
+indent_style = space
+indent_size = 4
+
