--- a/examples/client/CMakeLists.txt
+++ b/examples/client/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.7)
-cmake_policy(SET CMP0079 NEW)
+if(POLICY CMP0079)
+	cmake_policy(SET CMP0079 NEW)
+endif()
 
 add_executable(datachannel-client main.cpp)
 set_target_properties(datachannel-client PROPERTIES
